--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.26",
     "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^5.3.3",
+    "gatsby-background-image": "^1.6.0",
     "gatsby-plugin-google-gtag": "^5.3.0",
     "gatsby-plugin-image": "^3.3.2",
     "gatsby-plugin-sharp": "^5.3.2",
     "gatsby-plugin-styled-components": "^6.3.0",
     "gatsby-source-filesystem": "^5.3.1",
     "gatsby-transformer-sharp": "^5.3.1",
+    "gbimage-bridge": "^0.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.6"
