--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@fontsource/poppins": "^4.5.10",
+    "@fontsource/work-sans": "^4.5.12",
     "@types/styled-components": "^5.1.26",
     "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^5.3.3",
