--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   "dependencies": {
     "@fontsource/poppins": "^4.5.10",
     "@fontsource/work-sans": "^4.5.12",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/styled-components": "^5.1.26",
     "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^5.3.3",
