--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/react-helmet": "^6.1.6",
     "@types/react-responsive": "^8.0.5",
     "@types/styled-components": "^5.1.26",
     "babel-plugin-styled-components": "^2.0.7",
@@ -30,6 +31,7 @@
     "gatsby-background-image": "^1.6.0",
     "gatsby-plugin-google-gtag": "^5.3.0",
     "gatsby-plugin-image": "^3.3.2",
+    "gatsby-plugin-react-svg": "^3.3.0",
     "gatsby-plugin-sharp": "^5.3.2",
     "gatsby-plugin-styled-components": "^6.3.0",
     "gatsby-source-filesystem": "^5.3.1",
@@ -37,6 +39,7 @@
     "gbimage-bridge": "^0.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-responsive": "^9.0.2",
     "styled-components": "^5.3.6"
   },
